--- a/css/styles.css
+++ b/css/styles.css
@@ -90,3 +90,74 @@ input, select{
 #cancel-edit-btn{
     margin-top: 1rem;
 }
+
+/* todo toolbar */
+
+#toolbar{
+    padding: 1rem;
+    border-bottom: 1px solid #ccc;
+    display: flex;
+}
+
+#toolbar h4{
+    margin-bottom: .5rem;
+}
+
+#search{
+    border-right: 1px solid #DDD;
+    padding-right: 1rem;
+    margin-right: 1rem;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+}
+
+#search form{
+    display: flex;
+}
+
+#search input{
+    width: 100%;
+    margin-right: .3rem;
+}
+
+#filter{
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+}
+
+#flex-select{
+    flex: 1;
+
+}
+
+/* todo list */
+
+.todo{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem;
+    border-bottom: 1px solid #ddd;
+    transition: .3s;
+}
+
+.todo h3{
+    flex: 1;
+    font-size: .9rem;
+}
+
+.todo button{
+    margin-left: .4rem;
+}
+
+.done{
+    background-color: #395169;
+}
+
+.done h3{
+    color: #FFF;
+    text-decoration: line-through;
+    font-style: italic;
+}
