--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,12 @@
     padding: 0%;
     margin: 0;
     font-family: Verdana;
-    color: #C0c0c0;
+    color: #969494;
     box-sizing: border-box;
 }
 
 body{
-    background-image: url("/img/background.jpg");
+    background-image: url("../img/background-c.jpg");
     background-position: center;
     background-size: cover;
 }
