--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     padding: 0%;
     margin: 0;
     font-family: Verdana;
-    color: #969494;
+    color: #102f5e;
     box-sizing: border-box;
 }
 
